Adicionando redirecionamento em ícones e corrigindo problemas

--- a/aluno/relatorio_banca/disponivel/index.html
+++ b/aluno/relatorio_banca/disponivel/index.html
@@ -31,7 +31,7 @@
             <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
         </div>
 
-        <a href="#">
+        <a href="../../perfil/index.html">
             <img id="fotoPerfilAluno" src="../../componentes/header/img/foto_padrao.svg" alt="foto" />
         </a>
     </header>
@@ -82,9 +82,7 @@
     <div class="container">
         <div class="coninerCentralizado">
             <div class="tipo_avaliador">
-                <ul id="listAvaliador">
-
-                </ul>
+                <ul id="listAvaliador"></ul>
             </div>
             <form class="form">
                 <div class="criterios">
@@ -95,22 +93,21 @@
                 </div>
                 <div class="criteriosText">
                     <div class="clareza">
-                        <form class="formCampos" action="">
-                        </form>
+                        <form class="formCampos" action=""></form>
                     </div>
                     <div class="clareza">
                         <form class="formCampos" action="">
                             <p id="clareza">CLAREZA</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -119,32 +116,34 @@
                         <form class="formCampos" action="">
                             <p id="objetividade">OBJETIVIDADE</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
 
                     <div class="fluencia">
                         <form class="formCampos" action="">
-                            <p id="fluenciaExposicaoIdeias">FLUÊNCIA NA EXPOSIÇÃO DE IDEIAS</p>
+                            <p id="fluenciaExposicaoIdeias">
+                                FLUÊNCIA NA EXPOSIÇÃO DE IDEIAS
+                            </p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -154,15 +153,15 @@
                             <p id="dominioConteudo">DOMÍNIO DO CONTEÚDO</p>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -171,15 +170,15 @@
                         <form class="formCampos" action="">
                             <p id="capacidadeComunicacao">CAPACIDADE DE COMUNICAÇÃO</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -188,15 +187,15 @@
                         <form class="formCampos" action="">
                             <p id="argumentacao">ARGUMENTAÇÃO</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -205,15 +204,15 @@
                         <form class="formCampos" action="">
                             <p id="organizacao">ORGANIZAÇÃO DA APRESENTAÇÃO</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -223,15 +222,15 @@
                             <p id="aproveitamentoRecursos">APROVEITAMENTO DOS RECURSOS</p>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -240,15 +239,15 @@
                         <form action="" class="formCampos">
                             <p id="posturaIntegrantes">POSTURA DOS INTEGRANTES</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
@@ -257,15 +256,15 @@
                         <form class="formCampos" action="">
                             <p id="usoTempo">USO DO TEMPO</p>
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="RUIM"/>
+                                <input type="radio" disabled name="radio" id="RUIM" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="REGULAR"/>
+                                <input type="radio" disabled name="radio" id="REGULAR" />
                             </label>
 
                             <label class="form-control">
-                                <input type="radio" disabled name="radio" id="ÓTIMO"/>
+                                <input type="radio" disabled name="radio" id="ÓTIMO" />
                             </label>
                         </form>
                     </div>
