--- a/aluno/relatorio_banca/indisponivel/index.html
+++ b/aluno/relatorio_banca/indisponivel/index.html
@@ -26,7 +26,7 @@
             <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
         </div>
 
-        <a href="#">
+        <a href="../../perfil/index.html">
             <img id="fotoPerfilAluno" src="../../componentes/header/img/foto_padrao.svg" alt="foto" />
         </a>
     </header>
@@ -65,7 +65,7 @@
             <span class="tooltip">Avaliações</span>
         </li>
         <li class="profile">
-            <a href="../../../home/login/index.html">
+            <a onclick="logout()">
                 <i class="bx bx-log-out" id="log_out"></i>
                 <span class="links_name">Log Out</span>
             </a>
