--- a/home/produto/index.html
+++ b/home/produto/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <a href="./index.html">
+        <a href="../index.html">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
         <nav class="navegacao">
@@ -35,8 +35,8 @@
 
         </nav>
         <nav class="login_adquirir">
-            <a href="./login/index.html" class="login_link">Login</a>
-            <a href="./compra/index.html">
+            <a href="../login/index.html" class="login_link">Login</a>
+            <a href="../compra/index.html">
                 <button>ADQUIRIR →</button>
             </a>
         </nav>
