arrumando tela de tarefas

--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -755,8 +755,6 @@
                             </div>
                         </div>
 
-
-
                         <div class="col-md-12 card-tarefa">
                             <div class="tarefa">
                                 <div class="nome-tarefa">
@@ -777,19 +775,19 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class="col-md-2 add-topico">
 
                 <div class="col-md-12 adicionar-tarefa">
                     <button class="col-md-12 botao-add-topico">ADICIONAR TÓPICO</button>
 
-                    <div class="col-md-12 modal-add-tarefa">
+                    <div class="col-md-12 modal-add-topico">
                         <input type="text" class="col-md-10 inserir-tarefa" maxlength="255"
                             placeholder="Insira o nome do tópico" required />
 
                         <div class="col-md-12 buttons">
-                            <button class="segundo-botao botao-cancelar">CANCELAR</button>
-                            <button class="primeiro-botao botao-confirmar">CRIAR</button>
+                            <button class="segundo-botao botao-cancelar-topico">CANCELAR</button>
+                            <button class="primeiro-botao botao-confirmar-topico">CRIAR</button>
                         </div>
                     </div>
                 </div>
@@ -1790,13 +1788,13 @@
                 <div class="col-md-12 adicionar-tarefa">
                     <button class="col-md-12 botao-add-topico">ADICIONAR TÓPICO</button>
 
-                    <div class="col-md-12 modal-add-tarefa">
+                    <div class="col-md-12 modal-add-topico">
                         <input type="text" class="col-md-10 inserir-tarefa" maxlength="255"
                             placeholder="Insira o nome do tópico" required />
 
                         <div class="col-md-12 buttons">
-                            <button class="segundo-botao botao-cancelar">CANCELAR</button>
-                            <button class="primeiro-botao botao-confirmar">CRIAR</button>
+                            <button class="segundo-botao botao-cancelar-topico">CANCELAR</button>
+                            <button class="primeiro-botao botao-confirmar-topico">CRIAR</button>
                         </div>
                     </div>
                 </div>
