--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -134,7 +134,7 @@
             </div>
 
             <div class="acoes-form-grupo">
-                <button class="primeiro_botao" type="submit" id="btnSalvarAlteracoes">SALVAR ALTERAÇÕES</button>
+                <button class="primeiro_botao" type="submit" id="btnSalvarAlteracoes" onclick="editarGrupo()">SALVAR ALTERAÇÕES</button>
             </div>
 
         </div>
