--- a/home/contato/index.html
+++ b/home/contato/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="inp-mensagem">
                             <input type="text" required />
-                            <label for="input" alt="Insira sua mensagem" placeholder="Sua mensagem"></label>
+                            <label for="input" alt="Sua mensagem" placeholder="Sua mensagem"></label>
                         </div>
                         <button type="button">ENVIAR</button>
                     </form>
