--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -247,7 +247,7 @@
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha</label>
-                    <input id="edit_user_senha" type="password" class="form-control senha"/>
+                    <input id="edit_user_senha" class="form-control senha"/>
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
