Tela de Tarefa - Arrumando a listagem dos tópicos

--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -607,6 +607,134 @@
                 </div>
 
 
+                <div class="topico" id="topico4">
+
+                    <div class="header-topico">
+                        <h2 id="nomeTopico">NOME DO TÓPICO</h2>
+                        <img src="img/icon-options.svg" alt="opções">
+                    </div>
+
+                    <button class="botao-add-topico" onclick="showModalCriarTarefa()"><img
+                        src="./img/mais.svg" alt="">ADICIONAR TAREFA</button>
+
+                    <form class="modal-add-tarefa">
+                        <input type="text" maxlength="255" placeholder="Insira o nome da tarefa" required />
+                        <input type="date" placeholder="Insira uma data de conclusão" required />
+        
+                        <div class="buttons-tarefa">
+                            <button class="botao-cancelar-tarefa" onclick="exitModalCriarTarefa()">CANCELAR</button>
+                            <button class="botao-criar-tarefa" type="submit">CRIAR</button>
+                        </div>
+                    </form>
+
+                    <div class="tarefa">
+                        <div class="header-tarefa">
+
+                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
+                                <div class="progress-bar" id="imgStatusTarefa1"
+                                role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                            </div>
+
+                            <p id="nomeTarefa">Nome da tarefa</p>
+                            <img src="img/icon-options.svg" alt="opções">
+
+                        </div>
+
+                        <div class="prioridade-tarefa">
+                            <img src="./img/calendario.svg" alt="">
+                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
+                        </div>
+
+                    </div>
+
+                    <div class="tarefa">
+                        <div class="header-tarefa">
+
+                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
+                                <div class="progress-bar" id="imgStatusTarefa1"
+                                role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                            </div>
+
+                            <p id="nomeTarefa">Nome da tarefa</p>
+                            <img src="img/icon-options.svg" alt="opções">
+
+                        </div>
+
+                        <div class="prioridade-tarefa">
+                            <img src="./img/calendario.svg" alt="">
+                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
+                        </div>
+
+                    </div>
+
+                    <div class="tarefa">
+                        <div class="header-tarefa">
+
+                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
+                                <div class="progress-bar" id="imgStatusTarefa1"
+                                role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                            </div>
+
+                            <p id="nomeTarefa">Nome da tarefa</p>
+                            <img src="img/icon-options.svg" alt="opções">
+
+                        </div>
+
+                        <div class="prioridade-tarefa">
+                            <img src="./img/calendario.svg" alt="">
+                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
+                        </div>
+
+                    </div>
+
+                    <div class="tarefa">
+                        <div class="header-tarefa">
+
+                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
+                                <div class="progress-bar" id="imgStatusTarefa1"
+                                role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                            </div>
+
+                            <p id="nomeTarefa">Nome da tarefa</p>
+                            <img src="img/icon-options.svg" alt="opções">
+
+                        </div>
+
+                        <div class="prioridade-tarefa">
+                            <img src="./img/calendario.svg" alt="">
+                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
+                        </div>
+
+                    </div>
+
+                    <div class="tarefa">
+                        <div class="header-tarefa">
+
+                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
+                                <div class="progress-bar" id="imgStatusTarefa1"
+                                role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                            </div>
+
+                            <p id="nomeTarefa">Nome da tarefa</p>
+                            <img src="img/icon-options.svg" alt="opções">
+
+                        </div>
+
+                        <div class="prioridade-tarefa">
+                            <img src="./img/calendario.svg" alt="">
+                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
             </div>
 
         
