--- a/home/produto/index.html
+++ b/home/produto/index.html
@@ -46,7 +46,7 @@
             <div class="div1">
                 <div class="textDiv1">
                     <h1>Nexus Insights</h1>
-                    <h2>Você tem um problema? Nós temos uma solução.</h2>
+                    <h2>Você tem um problema? Nós temos a solução.</h2>
                 </div>
                 <img src="./img/computador.png" alt="">
             </div>
@@ -55,14 +55,14 @@
         <div class="div2">
             <div class="textDiv2">
                 <h1>O que fazemos?</h1>
-                <h2>Que tal uma solução confiavel, simples e inovadora para os seus problemas? Nós da Nexus Insights
-                    vamos solucionar os desafios do seu dia a dia atravéz da tecnologia, prezando pela qualidade e pelo
+                <h2>Que tal uma solução confiável, simples e inovadora para os seus problemas? Nós da Nexus Insights
+                    surgimos para solucionar os desafios do seu dia a dia através da tecnologia, prezando pela qualidade e pelo
                     comprometimento.
-                    O Nexus TCC vai auxiliar estudantes, professores e instituições em questões de organização e
-                    comunicação durante o TCC, além de unificar em um só ambiente as funcionalidades mais promissoras do
+                    O Nexus TCC visa auxiliar estudantes, professores e instituições em questões de organização e
+                    comunicação durante o desenvolvimento do seu TCC, além de unificar em um só ambiente as funcionalidades mais promissoras do
                     mercado atual.
                 </h2>
-                <h3>Nexus TCC é mais que educação, é a evolução </h3>
+                <h3>Nexus TCC é mais que educação, é a evolução. </h3>
             </div>
             <img src="./img/lousa.svg" alt="">
         </div>
@@ -71,7 +71,7 @@
                 <img src="./img/missao.svg" alt="">
                 <h1>Missão</h1>
                 <p>Tendo em vista o contexto pandêmico e a alta demanda por sistemas dinâmicos e eficientes, visamos
-                    oferecer ao cliente soluções inovadoras aliando-o ao uso da tecnologia, além de proporcionar a
+                    oferecer ao cliente soluções inovadoras aliando-a ao uso da tecnologia, além de proporcionar a
                     melhor experiência ao usuário. </p>
             </div>
 
