--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
+            <h1 id="nomeAluno"></h1>
         </div>
 
         <a href="../perfil/">
@@ -79,19 +79,17 @@
     <main>
 
         <div class="header">
-
             <ul>
                 <li data-tabs="individual" class="ativo" id="tarefa-individual">MINHAS TAREFAS</li>
                 <li data-tabs="geral" id="tarefa-geral">TAREFAS GERAIS</li>
             </ul>
-
         </div>
 
         <div class="container-geral">
 
             <div id="container-tarefas">
 
-                <div class="topico" id="topico1">
+                <!-- <div class="topico" id="topico1">
 
                     <div class="header-topico">
                         <h2 id="nomeTopico">NOME DO TÓPICO</h2>
@@ -135,6 +133,8 @@
                             <button class="botao-criar-tarefa" type="submit">CRIAR</button>
                         </div>
                     </form>
+
+
 
                     <div class="tarefa">
                         <div class="header-tarefa">
@@ -266,12 +266,10 @@
 
                     </div>
 
-                </div>
+                </div> -->
 
 
-
-
-                <div class="topico" id="topico2">
+                <!-- <div class="topico" id="topico2">
 
                     <div class="header-topico">
                         <h2 id="nomeTopico">NOME DO TÓPICO</h2>
@@ -392,10 +390,6 @@
                     </div>
 
                 </div>
-
-
-
-
 
 
                 <div class="topico" id="topico3">
@@ -641,130 +635,7 @@
 
                     </div>
 
-                </div>
-
-
-                <div class="topico" id="topico4">
-
-                    <div class="header-topico">
-                        <h2 id="nomeTopico">NOME DO TÓPICO</h2>
-                        <img src="img/icon-options.svg" alt="opções">
-                    </div>
-
-                    <button class="botao-add-topico" onclick="showModalCriarTarefa()"><img src="./img/mais.svg"
-                            alt="">ADICIONAR TAREFA</button>
-
-                    <form class="modal-add-tarefa">
-                        <input type="text" maxlength="255" placeholder="Insira o nome da tarefa" required />
-                        <input type="date" placeholder="Insira uma data de conclusão" required />
-
-                        <div class="buttons-tarefa">
-                            <button class="botao-cancelar-tarefa" onclick="exitModalCriarTarefa()">CANCELAR</button>
-                            <button class="botao-criar-tarefa" type="submit">CRIAR</button>
-                        </div>
-                    </form>
-
-                    <div class="tarefa">
-                        <div class="header-tarefa">
-
-                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
-                                <div class="progress-bar" id="imgStatusTarefa1" role="progressbar" style="width: 0%"
-                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-
-                            <p id="nomeTarefa" onclick="showModalInfosTarefa()">Nome da tarefa</p>
-                            <img src="img/icon-options.svg" alt="opções">
-
-                        </div>
-
-                        <div class="prioridade-tarefa">
-                            <img src="./img/calendario.svg" alt="">
-                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
-                        </div>
-
-                    </div>
-
-                    <div class="tarefa">
-                        <div class="header-tarefa">
-
-                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
-                                <div class="progress-bar" id="imgStatusTarefa1" role="progressbar" style="width: 0%"
-                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-
-                            <p id="nomeTarefa" onclick="showModalInfosTarefa()">Nome da tarefa</p>
-                            <img src="img/icon-options.svg" alt="opções">
-
-                        </div>
-
-                        <div class="prioridade-tarefa">
-                            <img src="./img/calendario.svg" alt="">
-                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
-                        </div>
-
-                    </div>
-
-                    <div class="tarefa">
-                        <div class="header-tarefa">
-
-                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
-                                <div class="progress-bar" id="imgStatusTarefa1" role="progressbar" style="width: 0%"
-                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-
-                            <p id="nomeTarefa" onclick="showModalInfosTarefa()">Nome da tarefa</p>
-                            <img src="img/icon-options.svg" alt="opções">
-
-                        </div>
-
-                        <div class="prioridade-tarefa">
-                            <img src="./img/calendario.svg" alt="">
-                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
-                        </div>
-
-                    </div>
-
-                    <div class="tarefa">
-                        <div class="header-tarefa">
-
-                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
-                                <div class="progress-bar" id="imgStatusTarefa1" role="progressbar" style="width: 0%"
-                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-
-                            <p id="nomeTarefa" onclick="showModalInfosTarefa()">Nome da tarefa</p>
-                            <img src="img/icon-options.svg" alt="opções">
-
-                        </div>
-
-                        <div class="prioridade-tarefa">
-                            <img src="./img/calendario.svg" alt="">
-                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
-                        </div>
-
-                    </div>
-
-                    <div class="tarefa">
-                        <div class="header-tarefa">
-
-                            <div class="progress" id="divStatusTarefa1" onclick="alterarStatus(divStatusTarefa1)">
-                                <div class="progress-bar" id="imgStatusTarefa1" role="progressbar" style="width: 0%"
-                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-
-                            <p id="nomeTarefa" onclick="showModalInfosTarefa()">Nome da tarefa</p>
-                            <img src="img/icon-options.svg" alt="opções">
-
-                        </div>
-
-                        <div class="prioridade-tarefa">
-                            <img src="./img/calendario.svg" alt="">
-                            <p id="dataConclusaoTarefa">XX/XX/XX</p>
-                        </div>
-
-                    </div>
-
-                </div>
+                </div> -->
 
 
             </div>
@@ -774,14 +645,15 @@
 
                 <button class="botao-add-topico" onclick="showModalCriarTopico()">ADICIONAR TÓPICO</button>
 
-                <form class="modal-add-topico">
-                    <input type="text" maxlength="255" placeholder="Insira o nome do tópico" required />
+                <form class="modal-add-topico" onsubmit="criarTopicoIndividual()">
+                    <input id="inputNomeTopicoIndividual" type="text" maxlength="255" placeholder="Insira o nome do tópico" required />
 
                     <div class="buttons-topico">
                         <button class="botao-cancelar-topico" onclick="exitModalCriarTopico()">CANCELAR</button>
                         <button class="botao-criar-topico" type="submit">CRIAR</button>
                     </div>
                 </form>
+
             </div>
 
         </div>
