--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -193,7 +193,7 @@
             </div>
 
             <div class="btn_finalizar">
-                <input type="submit" value="FINALIZAR PEDIDO →">
+                <input type="submit" value="FINALIZAR PEDIDO →" href="../../login/index.html">
             </div>
         </form>
     </main>
