tarefas individuais - alterar status

--- a/aluno/tarefas/index.html
+++ b/aluno/tarefas/index.html
@@ -658,18 +658,19 @@
 
         </div>
 
-        <div class="modal-infos-tarefa" id="modalInfosTarefa1">
-
-            <h1 id="nomeTarefa">TAREFA</h1>
+        <div class="modal-infos-tarefa" id="modalInfosTarefaIndividual">
+            <h1>EDITAR TAREFA</h1>
             <form class="form-infos-tarefa">
+                <div>
+                    <label>Nome da Tarefa:</label>
+                    <input type="text" id="nome-tarefa-individual">
+                </div>
 
                 <div class="container-inputs-modal-tarefa">
-
                     <div class="input-modal-tarefa">
                         <label>Tópico</label>
-                        <select required>
-                            <option selected></option>
-                            <option value="1">Não iniciada</option>
+                        <select id="select-topico-individual">
+                            <option selected value="1">Não iniciada</option>
                             <option value="2">Iniciada</option>
                             <option value="3">Concluída</option>
                         </select>
@@ -677,9 +678,8 @@
 
                     <div class="input-modal-tarefa">
                         <label>Status</label>
-                        <select required>
-                            <option selected></option>
-                            <option value="1">Não iniciada</option>
+                        <select id="select-status-tarefa-individual">
+                            <option selected value="1">Não iniciada</option>
                             <option value="2">Iniciada</option>
                             <option value="3">Concluída</option>
                         </select>
@@ -687,9 +687,8 @@
 
                     <div class="input-modal-tarefa">
                         <label>Prioridade</label>
-                        <select required>
-                            <option selected></option>
-                            <option value="1">Baixa</option>
+                        <select id="select-priorodade-tarefa-individual">
+                            <option selected value="1">Baixa</option>
                             <option value="2">Média</option>
                             <option value="3">Alta</option>
                         </select>
@@ -701,12 +700,12 @@
 
                     <div class="input-data-modal">
                         <label>Data de início das aulas</label>
-                        <input type="date" required>
+                        <input type="date" id="data-inicio-tarefa-individual">
                     </div>
 
                     <div class="input-data-modal">
                         <label>Data de término das aulas</label>
-                        <input type="date" required>
+                        <input type="date" id="data-conclusao-tarefa-individual">
                     </div>
 
                 </div>
@@ -732,7 +731,7 @@
 
 
 
-        <div class="container-geral-tarefas-gerais">
+        <!-- <div class="container-geral-tarefas-gerais">
 
             <div id="container-tarefas-gerais">
 
@@ -1226,7 +1225,7 @@
 
             </form>
 
-        </div>
+        </div> -->
 
 
 
